# tmp

./: .gitignore  README.md  WORKSPACE  bazel-demo  build.sh
proto/: BUILD.bazel  hello.proto
scripts/: 1.install-grpc-gateway.sh  2.generate_go_pb.sh  3.cp_pb_go_to_go_path.sh
src/: BUILD.bazel  client.cc  query_info.cc  query_info.h  query_order.cc  query_order.h  server.cc
src/mysql/: BUILD.bazel  create.sql  db_pool.cc  db_pool.h  mysql_pool.cc  mysql_pool.h
tests/: BUILD  all_test.cc
utils/: BUILD.bazel  basic.cc  basic.h  ssl_util.cc  ssl_util.h  utils.cc  utils.h
